[NCIVSA-9] Address vulnerability issues [KLO, 110812]
git-svn-id: https://ncisvn.nci.nih.gov/svn/ncivalueset/ncivalueseteditor/trunk@157 2c99d0e6-60b6-42c7-aff0-cedb7f4b1d2e